<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ЯпонаХата</string>
    <string name="menu">Меню</string>
    <string name="news">Новости</string>
    <string name="map">Карта</string>
    <string name="feedback">Отзывы</string>
    <string name="favorites">Избранное</string>
    <string name="all">Список Блюд</string>
    <string name="profile">Мой Профиль</string>

    <string name="phone">ТЕЛЕФОН:</string>
    <string name="schedule">Время работы:</string>
    <string name="address">АДРЕС:</string>
    <string name="email">E-MAIL:</string>

    <string-array name ="menu_items">
        <item>Суши</item>
        <item>Сашими</item>
        <item>Роллы</item>
        <item>Императорские роллы</item>
        <item>Хенд-роллы</item>
        <item>Сладкие роллы</item>
        <item>Супы и салаты</item>
        <item>Горячие блюда</item>
        <item>Японавесна</item>
        <item>Ассорти</item>
    </string-array>

    <array name="cat_images">
        <item>drawable/japane</item>
        <item>drawable/japane</item>
        <item>drawable/japane</item>
        <item>drawable/japane</item>
        <item>drawable/japane</item>
        <item>drawable/japane</item>
        <item>drawable/japane</item>
        <item>drawable/japane</item>
        <item>drawable/japane</item>
        <item>drawable/japane</item>
    </array>



    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Здравствуйте, %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">479732378772308</string>
    <string name="VK_API_ID">3726895</string>
    <string name="exception">Exception: %1$s</string>
</resources>
